data input/search/analysis redirect complete

--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -23,32 +23,28 @@
   <div class="smartListShelf clear">
 
 <div id="item1" class="smartListItem left">
-<div class="deckItemTitle"><a href="https://www.tis.bizfile.gov.sg/ngbtisinternet/faces/oracle/webcenter/portalapp/pages/TransactionMain.jspx?selectedETransId=dirSearch" title="Search Directory of Registered Entities">
+<div class="deckItemTitle"><a href="/input/" title="Search Directory of Registered Entities">
 Data input</a>
 <div class="liner"></div></div>
-<div class="deckIcon"><a href="https://www.tis.bizfile.gov.sg/ngbtisinternet/faces/oracle/webcenter/portalapp/pages/TransactionMain.jspx?selectedETransId=dirSearch" title="Search Directory of Registered Entities">
+<div class="deckIcon"><a href="/input/" title="Search Directory of Registered Entities">
 <img src="{% static 'img/input.png' %}" class="responsive-img" style='max-height:100px;' alt="face"></a></div>
 </div>
 <div id="item2" class="smartListItem left">
-<div class="deckItemTitle"><a href="http://www.bizfinx.gov.sg" title="Prepare Financial Statements using BizFinx">
+<div class="deckItemTitle"><a href="/search/" title="Prepare Financial Statements using BizFinx">
 Data Search</a>
 <div class="liner"></div></div>
-<div class="deckIcon"><a href="http://www.bizfinx.gov.sg" title="Prepare Financial Statements using BizFinx">
+<div class="deckIcon"><a href="/search/" title="Prepare Financial Statements using BizFinx">
 <img src="{% static 'img/search.jpg' %}" alt="Prepare Financial Statements using BizFinx"></a></div>
 </div>
 <div id="item3" class="smartListItem left">
-<div class="deckItemTitle"><a href="/components/templates/SSICCodeSearch.aspx" title="Find SSIC Code for Business Activities">
+<div class="deckItemTitle"><a href="/analysis/" title="Find SSIC Code for Business Activities">
 Analysis result</a>
 <div class="liner"></div></div>
-<div class="deckIcon"><a href="/components/templates/SSICCodeSearch.aspx" title="Find SSIC Code for Business Activities">
+<div class="deckIcon"><a href="/analysis/" title="Find SSIC Code for Business Activities">
 <img src="{% static 'img/analysis.png' %}" alt="Find SSIC Code for Business Activities"></a></div>
 </div>
 </div>
-	<footer>
-		<div class="container-fluid" style='margin-left:15px'>
-			<p><a href="#" target="blank">Contact</a> | <a href="#" target="blank">LinkedIn</a> | <a href="#" target="blank">Twitter</a> | <a href="#" target="blank">Google+</a></p>
-		</div>
-	</footer>
+
 
 </body>
 
